Add auto-encoders to DRN
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/drn-en/targets.yml
+++ b/orsys/drn-en/targets.yml
@@ -40,6 +40,12 @@
     - path: en/nn/rnn
       flavor: demo-detailed
 
+- name: ae
+  title: auto-encoders
+  sections:
+    - path: en/nn/ae
+      flavor: demo
+
 - name: gan
   title: gan
   sections:
