--- a/shared/img/pca-nuage.yml
+++ b/shared/img/pca-nuage.yml
@@ -1,4 +1,5 @@
 author: membre Nicoguaro de Wikimedia
+author_en: Wikimedia member Nicoguaro
 license: CC-BY-4.0
 title: A scatter plot of samples that are distributed according a bivariate Gaussian
   distribution
