Improve DRN English
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/reinforcement-learning/reinforcement-learning.yml
+++ b/shared/latex/en/reinforcement-learning/reinforcement-learning.yml
@@ -1,13 +1,17 @@
 default_titles:
-  a2c: Actor-critic methods
+  actor-critic: Actor-critic methods
   alphago: AlphaGo
   intro: Introduction
   q-learning: Q-learning
 flavors:
   full:
     - intro
+    - \questions
     - q-learning
-    - a2c
+    - \questions
+    - actor-critic
+    - \questions
     - alphago
     - /questions
+    - demo
 title: Reinforcement Learning
