--- a/shared/latex/en/supervised/supervised.yml
+++ b/shared/latex/en/supervised/supervised.yml
@@ -7,7 +7,10 @@ flavors:
     - linear-regression
     - cost-error-function
     - /en/nn/gradient-descent
+    - /questions
     - demo-linear-regression
     - naive-bayes
+    - /questions
     - random-forest
+    - /questions
 title: Overview of classical machine learning
