Fix some DRN translations/bugs
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/nn/nn.yml
+++ b/shared/latex/en/nn/nn.yml
@@ -7,11 +7,12 @@ default_titles:
 flavors:
   deep-detailed-demo:
     - intro
-    - demo
+    - playground
     - gradient-descent
     - optimize
     - deep-optimize
     - regularization
+    - playground
     - /questions
     - demo
 title: Neural networks
