Add tf + keras to drn
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/drn-en/targets.yml
+++ b/orsys/drn-en/targets.yml
@@ -28,6 +28,12 @@
     - path: en/nn
       flavor: deep-detailed-demo
 
+- name: tf-keras
+  title: tf-keras
+  sections:
+    - path: en/tf-keras
+      flavor: full
+
 - name: cnn
   title: cnn
   sections:
