Add keras to CNN and RNN for DRN English
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/nn/cnn/cnn.yml
+++ b/shared/latex/en/nn/cnn/cnn.yml
@@ -1,5 +1,6 @@
 default_titles:
   data: Data \& tasks
+  keras: Implementation in Keras
   model: Model
   modern-architectures: Modern CNN architectures
   generation: Generative models building block
@@ -9,6 +10,7 @@ flavors:
     - model
     - modern-architectures
     - generation
+    - keras
     - /questions
     - demo
 title: Convolutional Neural Networks
