--- a/orsys/INTRA/2021-03-STMICRO/targets.yml
+++ b/orsys/INTRA/2021-03-STMICRO/targets.yml
@@ -33,17 +33,17 @@
     - path: nn/cnn
       flavor: full
 
-    - path: auto-encoders
+    - path: nn/ae
       flavor: full
 
-    - path: reinforcement-learning
+    - path: rl
       flavor: full
 
 
 - name: j3
   title: Jour 3 --- Langage et traitement de séquences
   sections:
-    - path: natural-language-processing
+    - path: nlp
       flavor: intro-nlp
 
     - title: Données séquentielles
