Split stuff in unsupervised
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/eni/ml-5J/targets.yml
+++ b/eni/ml-5J/targets.yml
@@ -17,7 +17,7 @@
   title: Jour 3 --- Algorithmes 2/2
   sections:
     - path: unsupervised
-      flavor: full
+      flavor: medium
 
 - name: j4
   title: Jour 4 --- Réseaux de neurones
