--- a/orsys/INTRA/2020-09-nextflow-mlb-dnn/targets.yml
+++ b/orsys/INTRA/2020-09-nextflow-mlb-dnn/targets.yml
@@ -12,7 +12,7 @@
   title: Jour 2 --- Apprentissage Supervisé
   sections:
     - path: unsupervised
-      flavor: dimreduce
+      flavor: dimreduce-anodetect
 
     - path: supervised
       flavor: standard-nobayes
