--- a/orsys/bda/targets.yml
+++ b/orsys/bda/targets.yml
@@ -20,7 +20,7 @@
   title: Jour 3 --- Apprentissage non-supervisé
   sections:
     - path: unsupervised
-      flavor: bda
+      flavor: full
 
 - name: j4
   title: Jour 4 --- Traitement du langage naturel
