--- a/shared/latex/unsupervised/unsupervised.yml
+++ b/shared/latex/unsupervised/unsupervised.yml
@@ -1,91 +1,24 @@
 default_titles:
-  algorithme-em: Espérance-Maximisation
-  anomaly-detection-light: Détection d'anomalies
-  clustering: Clustering
-  clustering-conclusion: Conclusions
-  dbscan: DBSCAN
-  demo-anomaly-detect: Démo Sklearn
-  demo-clustering: Démo Sklearn
-  demo-dim-reduce: Démo Sklearn
-  dimensionality-reduction: Réduction de la dimensionnalité
-  hierarchical-clustering: Clustering Hiérarchique
   introduction: Introduction
-  kmeans-gaussian: K-Means
-  pca-classification-hierarchique-composantes-principales:
-    Classification Hiérarchique
-    sur Composantes Principales
-  pca-inverse: Clustering par ACP
-  pca-lda: "Réduction de la dimensionnalité : Projections linéaires"
-  pca-variantes: Variantes Spécifiques
-  tp-clustering: "Travaux Pratiques : Clustering"
-  tp-dim-reduce: "Travaux Pratiques : Réduction de dimension"
-  unsupervised-metrics: Métriques de clustering
 flavors:
   light:
     - introduction
-    - dimensionality-reduction
-    - pca-lda
-    - demo-dim-reduce: null
-    - kmeans-gaussian
-    - dbscan
-    - clustering-conclusion
-    - demo-clustering: null
-    - anomaly-detection-light
-    - demo-anomaly-detect: null
-    - /questions
-  bda:
+    - $dimensionality-reduction: light
+    - $clustering: light
+    - $anomaly-detection: light
+  medium:
     - introduction
-    - dimensionality-reduction
-    - pca-lda: null
-    - pca-variantes: null
-    - tsne-umap: null
-    - demo-dim-reduce: null
-    - tp-dim-reduce: Travaux Pratiques
-    - /questions
-    - clustering
-    - kmeans-gaussian: null
-    - dbscan: null
-    - hierarchical-clustering: null
-    - unsupervised-metrics: null
-    - clustering-conclusion: null
-    - demo-clustering: null
-    - /questions
-    - pca-classification-hierarchique-composantes-principales: Méthodes hybrides
-    - pca-inverse: null
-    - tp-clustering: null
-    - /questions
-    - anomaly-detection-light
-    - demo-anomaly-detect: null
-    - /questions
-  dimreduce:
-    - dimensionality-reduction
-    - pca-lda
-    - demo-dim-reduce
-    - /questions
-    - anomaly-detection-light
-    - demo-anomaly-detect
-    - /questions
-    - tp-dim-reduce
-  mlb:
-    - dimensionality-reduction
-    - pca-lda
-    - /questions
-    - demo-dim-reduce
-    - tp-dim-reduce
+    - $dimensionality-reduction: light-tp
+    - $clustering: kmeans
+    - $anomaly-detection: light
   full:
     - introduction
-    - dimensionality-reduction
-    - pca-lda
-    - demo-dim-reduce
-    - /questions
-    - algorithme-em
-    - kmeans-gaussian
-    - demo-clustering
-    - /questions
-    - anomaly-detection-light
-    - demo-anomaly-detect
-    - /questions
-    - tp-dim-reduce
-    - tp-clustering
+    - $dimensionality-reduction: full
+    - $clustering: full
+    - $anomaly-detection: light
+  dimreduce-anodetect:
+    - $dimensionality-reduction: light-tp
+    - $anomaly-detection: light
+  dimreduce:
+    - $dimensionality-reduction: light-tp
 title: Apprentissage non-supervisé
-version: 3
