--- a/templates/yml/company-config.yml
+++ b/templates/yml/company-config.yml
@@ -1,4 +1,4 @@
 company_name: Company Name
-company_logo: logos/logo
+company_logo: img/logos/logo
 company_logo_height: 1cm
 company_website: https://www.company-name.com/
