Create gan and transformer folder in nn
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/INTRA/2020-09-natixis/latex/nn/nn.yml
+++ b/orsys/INTRA/2020-09-natixis/latex/nn/nn.yml
@@ -30,8 +30,7 @@ flavors:
     - /sequential-data/sequence-handling: Traitement de séquences
     - $cnn: demo
     - $rnn: demo
-    - attention-model: Transformeurs
-    - transformer: null
+    - $transformer: light
     - /questions
     - /sequential-data/tp-tf: Travaux Pratiques
 title: Réseaux de neurones
