--- a/orsys/INTRA/2020-09-nextflow-mlb-dnn/targets.yml
+++ b/orsys/INTRA/2020-09-nextflow-mlb-dnn/targets.yml
@@ -66,5 +66,5 @@
     - path: nn/rnn
       flavor: full
 
-    - path: nn
-      flavor: transformer
+    - path: nn/transformer
+      flavor: full
