--- a/eni/ml-vue-d-ensemble-1J/targets.yml
+++ b/eni/ml-vue-d-ensemble-1J/targets.yml
@@ -23,9 +23,9 @@
     - path: rl
       flavor: full
 
-    - path: nn
+    - path: nn/gan
       title: Des réseaux particuliers
-      flavor: gan-intro
+      flavor: light
 
     - path: big-questions
       flavor: full
