--- a/orsys/INTRA/2021-03-STMICRO/targets.yml
+++ b/orsys/INTRA/2021-03-STMICRO/targets.yml
@@ -55,7 +55,7 @@
       flavor: full
 
     - title: Réseaux transformeurs
-      path: nn
-      flavor: transformer
+      path: nn/transformer
+      flavor: full
 
     - contact
