--- a/orsys/INTRA/2021-04-BRGM/targets.yml
+++ b/orsys/INTRA/2021-04-BRGM/targets.yml
@@ -66,7 +66,7 @@
       flavor: full
 
     - title: Réseaux transformeurs
-      path: nn
-      flavor: transformer
+      path: nn/transformer
+      flavor: full
 
     - contact
