Add modern architectures to CNN
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/img/d2l/conv-multi-in.yml
+++ b/shared/img/d2l/conv-multi-in.yml
@@ -1,3 +1,4 @@
 author: Dive into Deep Learning
 license: CC-BY-SA-4.0
-title: Cross-correlation computation with 2 input channels
+title: Calcul de corrélation croisée avec 2 canaux d'entrée
+title_en: Cross-correlation computation with 2 input channels
