--- a/shared/img/d2l/conv-stride.yml
+++ b/shared/img/d2l/conv-stride.yml
@@ -1,3 +1,4 @@
 author: Dive into Deep Learning
 license: CC-BY-SA-4.0
-title: Cross-correlation with strides of 3 and 2 for height and width, respectively
+title: Corrélation croisée avec pas de 3 et 2 pour la hauteur et la largeur, respectivement
+title_en: Cross-correlation with strides of 3 and 2 for height and width, respectively
