--- a/shared/img/d2l/inception-full.yml
+++ b/shared/img/d2l/inception-full.yml
@@ -1,3 +1,4 @@
 author: Dive into Deep Learning
 license: CC-BY-SA-4.0
-title: The GoogLeNet architecture
+title: L'architecture de GoogLeNet
+title_en: The GoogLeNet architecture
