--- a/shared/img/d2l/lenet.yml
+++ b/shared/img/d2l/lenet.yml
@@ -1,3 +1,4 @@
 author: Dive into Deep Learning
 license: CC-BY-SA-4.0
-title: Data flow in LeNet
+title: Flot de données dans LeNet
+title_en: Data flow in LeNet
