--- a/shared/img/d2l/nin.yml
+++ b/shared/img/d2l/nin.yml
@@ -1,3 +1,4 @@
 author: Dive into Deep Learning
 license: CC-BY-SA-4.0
-title: Comparing architectures of VGG and NiN
+title: Comparaison des architectures de VGG et NiN
+title_en: Comparing architectures of VGG and NiN
