--- a/shared/img/d2l/residual-block.yml
+++ b/shared/img/d2l/residual-block.yml
@@ -1,3 +1,4 @@
 author: Dive into Deep Learning
 license: CC-BY-SA-4.0
-title: A regular block (left) and a residual block (right)
+title: Un bloc normal (gauche) et un bloc résiduel (droite)
+title_en: A regular block (left) and a residual block (right)
