--- a/shared/img/d2l/resnet-block.yml
+++ b/shared/img/d2l/resnet-block.yml
@@ -1,3 +1,4 @@
 author: Dive into Deep Learning
 license: CC-BY-SA-4.0
-title: ResNet block with and without $1 \times 1$ convolution
+title: Un bloc ResNet avec et sans convolution $1 \times 1$
+title_en: ResNet block with and without $1 \times 1$ convolution
