--- a/shared/img/d2l/resnet18.yml
+++ b/shared/img/d2l/resnet18.yml
@@ -1,3 +1,4 @@
 author: Dive into Deep Learning
 license: CC-BY-SA-4.0
-title: The ResNet-18 architecture
+title: L'architecture de ResNet-18
+title_en: The ResNet-18 architecture
