--- a/shared/img/d2l/trans-conv.yml
+++ b/shared/img/d2l/trans-conv.yml
@@ -1,3 +1,4 @@
 author: Dive into Deep Learning
 license: CC-BY-SA-4.0
-title: Transposed convolution layer with a $2 \times 2$ kernel
+title: Couche de convolution transposée avec noyau $2 \times 2$
+title_en: Transposed convolution layer with a $2 \times 2$ kernel
