--- a/shared/img/d2l/vgg.yml
+++ b/shared/img/d2l/vgg.yml
@@ -1,3 +1,4 @@
 author: Dive into Deep Learning
 license: CC-BY-SA-4.0
-title: From AlexNet to VGG that is designed from building blocks
+title: D'AlexNet à VGG, qui est construit avec des blocs
+title_en: From AlexNet to VGG that is designed from building blocks
