--- a/shared/img/d2l/alexnet.yml
+++ b/shared/img/d2l/alexnet.yml
@@ -1,3 +1,4 @@
 author: Dive into Deep Learning
 license: CC-BY-SA-4.0
-title: From LeNet (left) to AlexNet (right)
+title: De LeNet (gauche) à AlexNet (droite)
+title_en: From LeNet (left) to AlexNet (right)
