--- a/shared/img/d2l/conv-pad.yml
+++ b/shared/img/d2l/conv-pad.yml
@@ -1,3 +1,4 @@
 author: Dive into Deep Learning
 license: CC-BY-SA-4.0
-title: Two-dimensional cross-correlation with padding
+title: Corrélation croisée à deux dimensions avec remplissage
+title_en: Two-dimensional cross-correlation with padding
