--- a/shared/img/d2l/correlation.yml
+++ b/shared/img/d2l/correlation.yml
@@ -1,3 +1,4 @@
 author: Dive into Deep Learning
 license: CC-BY-SA-4.0
-title: Two-dimensional cross-correlation operation
+title: Opération de corrélation croisée à deux dimensions
+title_en: Two-dimensional cross-correlation operation
