--- a/shared/img/d2l/densenet-block.yml
+++ b/shared/img/d2l/densenet-block.yml
@@ -1,3 +1,4 @@
 author: Dive into Deep Learning
 license: CC-BY-SA-4.0
-title: ResNet uses addition (left), DenseNet uses concatenation (right)
+title: ResNet utilise l'addition (gauche), DenseNet utilise la concaténation (droite)
+title_en: ResNet uses addition (left), DenseNet uses concatenation (right)
