--- a/shared/img/d2l/densenet.yml
+++ b/shared/img/d2l/densenet.yml
@@ -1,3 +1,4 @@
 author: Dive into Deep Learning
 license: CC-BY-SA-4.0
-title: Dense connections in DenseNet
+title: Connexions denses dans DenseNet
+title_en: Dense connections in DenseNet
