--- a/shared/img/d2l/inception.yml
+++ b/shared/img/d2l/inception.yml
@@ -1,3 +1,4 @@
 author: Dive into Deep Learning
 license: CC-BY-SA-4.0
-title: Structure of the Inception block
+title: Structure d'un bloc Inception
+title_en: Structure of the Inception block
