--- a/shared/img/d2l/lenet-vert.yml
+++ b/shared/img/d2l/lenet-vert.yml
@@ -1,3 +1,4 @@
 author: Dive into Deep Learning
 license: CC-BY-SA-4.0
-title: Compressed notation for LeNet-5
+title: Notation courte pour LeNet-5
+title_en: Compressed notation for LeNet-5
