--- a/shared/img/d2l/pooling.yml
+++ b/shared/img/d2l/pooling.yml
@@ -1,3 +1,4 @@
 author: Dive into Deep Learning
 license: CC-BY-SA-4.0
-title: Maximum pooling with a window shape of $2 \times 2$
+title: Aggrégation par maximum avec une fenêtre $2 \times 2$
+title_en: Maximum pooling with a window shape of $2 \times 2$
