Edit slightly python-avance
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/basics/basics.yml
+++ b/shared/latex/python/basics/basics.yml
@@ -43,5 +43,29 @@ flavors:
     - /python/regexes/tp-regexes
     - exceptions
     - /questions
+  no-tp:
+    - support
+    - variables
+    - /questions
+    - display
+    - /questions
+    - intro-collections: Collections
+    - lists: null
+    - dictionaries: null
+    - tuples: null
+    - sets: null
+    - /questions
+    - control-structures
+    - /questions
+    - files
+    - /questions
+    - functions
+    - /questions
+    - native-functions
+    - /questions
+    - /python/regexes/regexes
+    - /questions
+    - exceptions
+    - /questions
 title: Bases du langage Python
 version: 3
