Add administration avancée en Python
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/sparks-formation/python-administration/targets.yml
+++ b/sparks-formation/python-administration/targets.yml
@@ -13,7 +13,7 @@
     - path: python/linux
       flavor: full
 
-    - path: python/files
+    - path: python/sys-admin
       flavor: full
 
     - path: python/parallelism
