--- a/shared/latex/python/advanced/advanced.yml
+++ b/shared/latex/python/advanced/advanced.yml
@@ -1,8 +1,11 @@
 default_titles:
+  comprehensions: Compréhensions
   context-managers: Gestionnaires de contexte
+  closures: Fermetures
   decorators: Décorateurs
   generators: Générateurs
   metaclasses: Méta-classes
+  tp: Travaux pratiques
 flavors:
   full:
     - generators
@@ -17,5 +20,14 @@ flavors:
     - context-managers
     - /questions
     - tp-context-managers
+  medium:
+    - decorators
+    - /questions
+    - closures
+    - /questions
+    - generators
+    - /questions
+    - comprehensions
+    - /questions
+    - tp
 title: Éléments avancés de Python
-version: 3
