--- a/eni/ml-5J/targets.yml
+++ b/eni/ml-5J/targets.yml
@@ -17,7 +17,7 @@
   title: Jour 3 --- Algorithmes 2/2
   sections:
     - path: unsupervised
-      flavor: bda
+      flavor: full
 
 - name: j4
   title: Jour 4 --- Réseaux de neurones
