Correctif nn cnn rnn eni/ml-5J

--- a/eni/ml-5J/targets.yml
+++ b/eni/ml-5J/targets.yml
@@ -33,6 +33,9 @@
 
     - path: big-questions
       flavor: full
+  
+    - path: nn/ae
+      flavor: full
 
     - path: recommander-system
       flavor: full
