--- a/shared/latex/nn/nn.yml
+++ b/shared/latex/nn/nn.yml
@@ -72,6 +72,7 @@ flavors:
     - regularisation
     - playground
     - /questions
+    - /tf-keras/keras 
     - tp-nn
     - $cnn: full
     - $gan: light
