Tweak ENI 1j slightly
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/eni/ml-vue-d-ensemble-1J/targets.yml
+++ b/eni/ml-vue-d-ensemble-1J/targets.yml
@@ -14,9 +14,6 @@
     - path: nn
       flavor: intro-cnn
 
-    - path: sequential-data
-      flavor: intro
-
     - path: nlp
       flavor: intro
 
@@ -38,3 +35,5 @@
 
     - path: sectors
       flavor: full
+
+    - contact
