--- a/shared/latex/nn/ae/ae.yml
+++ b/shared/latex/nn/ae/ae.yml
@@ -6,5 +6,9 @@ flavors:
     - autoencoder
     - /questions
     - tp
+  demo:
+    - autoencoder
+    - /questions
+    - tp-demo
 title: Auto-encodeurs
 version: 3
