--- a/shared/latex/nn/cnn/cnn.yml
+++ b/shared/latex/nn/cnn/cnn.yml
@@ -23,4 +23,14 @@ flavors:
     - model
     - /questions
     - tp
+  full-demo:
+    - data
+    - model
+    - /questions
+    - demo
+    - modern-architectures
+    - /questions
+    - keras
+    - /questions
+    - tp-demo
 title: Réseaux de neurones à convolutions
