--- a/shared/latex/nn/gan/gan.yml
+++ b/shared/latex/nn/gan/gan.yml
@@ -1,15 +1,15 @@
 default_titles:
   intro: Introduction
-  model: Modèle
+  variants: Variantes
   demo: Démonstration
 flavors:
+  full:
+    - intro
+    - variants
+    - /questions
+    - demo
   light:
     - intro
-    - model
-    - /questions
-  demo:
-    - intro
-    - model
     - /questions
     - demo
 title: Réseaux génératifs antagonistes
