--- a/orsys/INTRA/2020-09-natixis/targets.yml
+++ b/orsys/INTRA/2020-09-natixis/targets.yml
@@ -21,7 +21,7 @@
   title: Jour 3 --- Apprentissage non supervisé
   sections:
     - path: unsupervised
-      flavor: full
+      flavor: full-trees
 
 - name: j4
   title: Jour 4 --- Réseaux de neurones \& séries temporelles
