--- a/shared/latex/nn/rnn/rnn.yml
+++ b/shared/latex/nn/rnn/rnn.yml
@@ -11,6 +11,12 @@ flavors:
     - keras
     - /questions
     - tp
+  full-no-tp:
+    - model
+    - lstm
+    - variants
+    - keras
+    - /questions
   demo:
     - model
     - /questions
