Add demos for DRN and some minor clean-up
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/drn/targets.yml
+++ b/orsys/drn/targets.yml
@@ -14,7 +14,7 @@
       flavor: drn
 
     - path: nn
-      flavor: deep-intro
+      flavor: deep-intro-demo
 
     - path: tf-keras
       flavor: full-demo
