--- a/shared/img/early-stopping-nzmog.yml
+++ b/shared/img/early-stopping-nzmog.yml
@@ -1,3 +1,3 @@
 author: F.-M. Giraud \& H. Mougard
 license: CC-BY-SA-4.0
-title: Effet du nombre d'itération sur le surraprentissage des réseaux de neurones
+title: Effet du nombre d'itérations sur le surraprentissage des réseaux de neurones
