Add word embeddings to DRN before RNNs
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/drn/targets.yml
+++ b/orsys/drn/targets.yml
@@ -27,7 +27,7 @@
       flavor: full-demo
 
     - path: nn/rnn
-      flavor: demo-detailed-keras
+      flavor: demo-detailed-keras-with-word-embeddings
 
     - path: nn/ae
       flavor: demo
