Rework tf-keras and nn, move colabs to tf-kereas
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/INTRA/2020-09-nextflow-mlb-dnn/targets.yml
+++ b/orsys/INTRA/2020-09-nextflow-mlb-dnn/targets.yml
@@ -29,18 +29,7 @@
 
     - title: TensorFlow et Deep Learning
       path: tf-keras
-      flavor: tf
-
-    - title: Réseaux de Neurones
-      path: nn
-      flavor: tp-tf-pur
-
-    - title: TensorFlow et Deep Learning
-      path: tf-keras
-      flavor: keras
-
-    - path: nn
-      flavor: tp-nn-keras
+      flavor: full-tp
 
     - path: big-questions
       flavor: full
