--- a/orsys/mlb/targets.yml
+++ b/orsys/mlb/targets.yml
@@ -29,6 +29,10 @@
     - path: nn
       flavor: deep-intro
 
+    - title: Keras
+      path: tf-keras
+      flavor: keras
+
     - path: nn/cnn
       flavor: full
 
