Change sectors section title
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/sectors/sectors.yml
+++ b/shared/latex/sectors/sectors.yml
@@ -15,5 +15,5 @@ flavors:
     - sante
     - coding
     - /questions
-title: Les Tendances et les Nouveaux Secteurs
+title: Impact sur des secteurs d'activité
 version: 3
